# AWS-Utils

./: README.md  setup.cfg
docs/: conf.py  index.rst
src/aws-utils/: glacier_utils.py  s3_sagemaker_utils.py
src/aws_utils/: glacier_utils.py  s3_sagemaker_utils.py
