[metadata]
name = aws-utils
version = 0.0.1
author = Saadiya Allahbaksh
author_email = ska78@drexel.edu
description = testing
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Digital-Pathology/AWS-Utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
install_requires = 
    boto3
    sagemaker

[options.packages.find]
where = src